# arrow-from-root

./: CMakeLists.txt  main.cpp  run_executable.sh
.cache/clangd/index/: arrowjets-from-rootevents.cpp.C96113E690770298.idx  arrowjets-from-rootevents.hh.BECDA0702D5892F0.idx  genEvent.hh.F9A3D8E6BFF54E40.idx  main.cpp.337E07A8845B9B3E.idx  writable-column.hh.4C443D8DB2F7F90E.idx  writer.hh.24BDD91B51E11298.idx
include/: LinkDef.h  genEvent.hh
include/arrow-serializer/: reader.hh  writable-column.hh  writer.hh
src/: CMakeLists.txt  arrowjets-from-rootevents.cpp  arrowjets-from-rootevents.hh
